tests/macro-tests/cases/property/defaults.stderr
error: unexpected end of input, expected parentheses
 --> cases/property/defaults.rs:3:1
  |
3 | #[property(CONTEXT, default)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `,`
  --> cases/property/defaults.rs:21:30
   |
21 | #[property(CONTEXT, default(a: true))]
   |                              ^

error: expected `,`
  --> cases/property/defaults.rs:33:30
   |
33 | #[property(CONTEXT, default(a: true, b: 2555, c: "ABC"))]
   |                              ^

error: expected `,`
  --> cases/property/defaults.rs:45:30
   |
45 | #[property(CONTEXT, default(a: 2555, b: true))]
   |                              ^

error[E0061]: this method takes 2 arguments but 0 arguments were supplied
  --> cases/property/defaults.rs:9:21
   |
9  | #[property(CONTEXT, default())]
   |                     ^^^^^^^ two arguments are missing
   |
note: method defined here
  --> cases/property/defaults.rs:9:1
   |
9  | #[property(CONTEXT, default())]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 | pub fn missing_default_values(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   |                                                   ---------------------  --------------------
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the arguments
   |
9  | #[property(CONTEXT, default(/* a */, /* b */)())]
   |                            ++++++++++++++++++

error[E0061]: this method takes 2 arguments but 1 argument was supplied
  --> cases/property/defaults.rs:15:21
   |
15 | #[property(CONTEXT, default(true))]
   |                     ^^^^^^^ argument #2 is missing
   |
note: method defined here
  --> cases/property/defaults.rs:15:1
   |
15 | #[property(CONTEXT, default(true))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 | pub fn incorrect_default_args_count_u_1(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                                    --------------------
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
15 | #[property(CONTEXT, default(true, /* b */)(true))]
   |                            +++++++++++++++

error[E0061]: this method takes 2 arguments but 3 arguments were supplied
  --> cases/property/defaults.rs:27:21
   |
27 | #[property(CONTEXT, default(true, 2555, "ABC"))]
   |                     ^^^^^^^             ----- unexpected argument #3 of type `&'static str`
   |
note: method defined here
  --> cases/property/defaults.rs:27:1
   |
27 | #[property(CONTEXT, default(true, 2555, "ABC"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the extra argument
   |
27 - #[property(CONTEXT, default(true, 2555, "ABC"))]
27 + #[property(CONTEXT, default(true, 2555))]
   |

error[E0277]: the trait bound `{integer}: IntoVar<bool>` is not satisfied
  --> cases/property/defaults.rs:39:29
   |
39 | #[property(CONTEXT, default(2555, true))]
   |                     ------- ^^^^ the trait `IntoVar<bool>` is not implemented for `{integer}`
   |                     |
   |                     required by a bound introduced by this call
   |
   = note: `IntoVar<T>` is implemented for all `T: VarValue`
   = note: `IntoVar<T>` is implemented for all `V: Var<T>`
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `invalid_default_args_types_u_2_::args`
  --> cases/property/defaults.rs:40:67
   |
39 | #[property(CONTEXT, default(2555, true))]
   | ----------------------------------------- required by a bound in this associated function
40 | pub fn invalid_default_args_types_u_2(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                   ^^^^^^^^^^^^^ required by this bound in `invalid_default_args_types_u_2_::args`

error[E0277]: the trait bound `bool: IntoVar<u32>` is not satisfied
  --> cases/property/defaults.rs:39:35
   |
39 | #[property(CONTEXT, default(2555, true))]
   |                     -------       ^^^^ the trait `IntoVar<u32>` is not implemented for `bool`
   |                     |
   |                     required by a bound introduced by this call
   |
   = note: `IntoVar<T>` is implemented for all `T: VarValue`
   = note: `IntoVar<T>` is implemented for all `V: Var<T>`
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `invalid_default_args_types_u_2_::args`
  --> cases/property/defaults.rs:40:90
   |
39 | #[property(CONTEXT, default(2555, true))]
   | ----------------------------------------- required by a bound in this associated function
40 | pub fn invalid_default_args_types_u_2(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                                          ^^^^^^^^^^^^ required by this bound in `invalid_default_args_types_u_2_::args`
